// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Forms/Field Default 1`] = `
<div
  className="storybook-container borrow-ui"
>
  <form
    onSubmit={[Function]}
  >
    <div
      style={
        Object {
          "width": 400,
        }
      }
    >
      <div
        className="borrow-ui__form__field borrow-ui__form__field--vertical"
      >
        <div
          className="borrow-ui__form__label borrow-ui__form__label--vertical borrow-ui__form__label--alignment-left"
          style={Object {}}
        >
          This field has a label
           
          <span
            className="borrow-ui__form__label--required"
          >
            *
          </span>
        </div>
        <div
          className="borrow-ui__form__field__controller borrow-ui__form__field__controller--vertical "
        >
          <input
            className="borrow-ui__form__field__input   undefined"
            placeholder="Insert your name..."
          />
        </div>
      </div>
      <div
        className="borrow-ui__form__field borrow-ui__form__field--vertical"
      >
        <div
          className="borrow-ui__form__field__controller borrow-ui__form__field__controller--vertical "
        >
          <input
            className="borrow-ui__form__field__input   undefined"
            placeholder="This one doesn't"
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Storyshots Forms/Field Horizontal Layout Label Alignment 1`] = `
<div
  className="storybook-container borrow-ui"
>
  <form
    onSubmit={[Function]}
  >
    <div
      style={
        Object {
          "width": 500,
        }
      }
    >
      <div
        className="m-b-20"
      >
        <h4>
          Alignment: 
          <span
            className="borrow-ui__text__monospace "
          >
            left
          </span>
        </h4>
        <div
          className="borrow-ui__form__field borrow-ui__form__field--horizontal"
        >
          <div
            className="borrow-ui__form__label borrow-ui__form__label--horizontal borrow-ui__form__label--alignment-left"
            style={
              Object {
                "minWidth": 280,
                "width": 280,
              }
            }
          >
            Horizontal layout label
             
          </div>
          <div
            className="borrow-ui__form__field__controller borrow-ui__form__field__controller--horizontal "
          >
            <input
              className="borrow-ui__form__field__input   undefined"
              placeholder="Insert your name..."
            />
          </div>
        </div>
        <div
          className="borrow-ui__form__field borrow-ui__form__field--horizontal"
        >
          <div
            className="borrow-ui__form__label borrow-ui__form__label--horizontal borrow-ui__form__label--alignment-left"
            style={
              Object {
                "minWidth": 280,
                "width": 280,
              }
            }
          >
            Short label
             
          </div>
          <div
            className="borrow-ui__form__field__controller borrow-ui__form__field__controller--horizontal "
          >
            <input
              className="borrow-ui__form__field__input   undefined"
              placeholder="Insert your name..."
            />
          </div>
        </div>
        <div
          className="borrow-ui__form__field borrow-ui__form__field--horizontal"
        >
          <div
            className="borrow-ui__form__label borrow-ui__form__label--horizontal borrow-ui__form__label--alignment-left"
            style={
              Object {
                "minWidth": 280,
                "width": 280,
              }
            }
          >
            Very very long field label for input field
             
          </div>
          <div
            className="borrow-ui__form__field__controller borrow-ui__form__field__controller--horizontal "
          >
            <input
              className="borrow-ui__form__field__input   undefined"
              placeholder="Insert your name..."
            />
          </div>
        </div>
      </div>
      <div
        className="m-b-20"
      >
        <h4>
          Alignment: 
          <span
            className="borrow-ui__text__monospace "
          >
            center
          </span>
        </h4>
        <div
          className="borrow-ui__form__field borrow-ui__form__field--horizontal"
        >
          <div
            className="borrow-ui__form__label borrow-ui__form__label--horizontal borrow-ui__form__label--alignment-center"
            style={
              Object {
                "minWidth": 280,
                "width": 280,
              }
            }
          >
            Horizontal layout label
             
          </div>
          <div
            className="borrow-ui__form__field__controller borrow-ui__form__field__controller--horizontal "
          >
            <input
              className="borrow-ui__form__field__input   undefined"
              placeholder="Insert your name..."
            />
          </div>
        </div>
        <div
          className="borrow-ui__form__field borrow-ui__form__field--horizontal"
        >
          <div
            className="borrow-ui__form__label borrow-ui__form__label--horizontal borrow-ui__form__label--alignment-center"
            style={
              Object {
                "minWidth": 280,
                "width": 280,
              }
            }
          >
            Short label
             
          </div>
          <div
            className="borrow-ui__form__field__controller borrow-ui__form__field__controller--horizontal "
          >
            <input
              className="borrow-ui__form__field__input   undefined"
              placeholder="Insert your name..."
            />
          </div>
        </div>
        <div
          className="borrow-ui__form__field borrow-ui__form__field--horizontal"
        >
          <div
            className="borrow-ui__form__label borrow-ui__form__label--horizontal borrow-ui__form__label--alignment-center"
            style={
              Object {
                "minWidth": 280,
                "width": 280,
              }
            }
          >
            Very very long field label for input field
             
          </div>
          <div
            className="borrow-ui__form__field__controller borrow-ui__form__field__controller--horizontal "
          >
            <input
              className="borrow-ui__form__field__input   undefined"
              placeholder="Insert your name..."
            />
          </div>
        </div>
      </div>
      <div
        className="m-b-20"
      >
        <h4>
          Alignment: 
          <span
            className="borrow-ui__text__monospace "
          >
            right
          </span>
        </h4>
        <div
          className="borrow-ui__form__field borrow-ui__form__field--horizontal"
        >
          <div
            className="borrow-ui__form__label borrow-ui__form__label--horizontal borrow-ui__form__label--alignment-right"
            style={
              Object {
                "minWidth": 280,
                "width": 280,
              }
            }
          >
            Horizontal layout label
             
          </div>
          <div
            className="borrow-ui__form__field__controller borrow-ui__form__field__controller--horizontal "
          >
            <input
              className="borrow-ui__form__field__input   undefined"
              placeholder="Insert your name..."
            />
          </div>
        </div>
        <div
          className="borrow-ui__form__field borrow-ui__form__field--horizontal"
        >
          <div
            className="borrow-ui__form__label borrow-ui__form__label--horizontal borrow-ui__form__label--alignment-right"
            style={
              Object {
                "minWidth": 280,
                "width": 280,
              }
            }
          >
            Short label
             
          </div>
          <div
            className="borrow-ui__form__field__controller borrow-ui__form__field__controller--horizontal "
          >
            <input
              className="borrow-ui__form__field__input   undefined"
              placeholder="Insert your name..."
            />
          </div>
        </div>
        <div
          className="borrow-ui__form__field borrow-ui__form__field--horizontal"
        >
          <div
            className="borrow-ui__form__label borrow-ui__form__label--horizontal borrow-ui__form__label--alignment-right"
            style={
              Object {
                "minWidth": 280,
                "width": 280,
              }
            }
          >
            Very very long field label for input field
             
          </div>
          <div
            className="borrow-ui__form__field__controller borrow-ui__form__field__controller--horizontal "
          >
            <input
              className="borrow-ui__form__field__input   undefined"
              placeholder="Insert your name..."
            />
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Storyshots Forms/Field Horizontal Layout Label Width 1`] = `
<div
  className="storybook-container borrow-ui"
>
  <form
    onSubmit={[Function]}
  >
    <div
      style={
        Object {
          "width": 500,
        }
      }
    >
      <div
        className="borrow-ui__form__field borrow-ui__form__field--horizontal"
      >
        <div
          className="borrow-ui__form__label borrow-ui__form__label--horizontal borrow-ui__form__label--alignment-left"
          style={
            Object {
              "minWidth": 280,
              "width": 280,
            }
          }
        >
          Horizontal layout label
           
        </div>
        <div
          className="borrow-ui__form__field__controller borrow-ui__form__field__controller--horizontal "
        >
          <input
            className="borrow-ui__form__field__input   undefined"
            placeholder="Insert your name..."
          />
        </div>
      </div>
      <div
        className="borrow-ui__form__field borrow-ui__form__field--horizontal"
      >
        <div
          className="borrow-ui__form__label borrow-ui__form__label--horizontal borrow-ui__form__label--alignment-left"
          style={
            Object {
              "minWidth": 280,
              "width": 280,
            }
          }
        >
          Short label
           
        </div>
        <div
          className="borrow-ui__form__field__controller borrow-ui__form__field__controller--horizontal "
        >
          <input
            className="borrow-ui__form__field__input   undefined"
            placeholder="Insert your name..."
          />
        </div>
      </div>
      <div
        className="borrow-ui__form__field borrow-ui__form__field--horizontal"
      >
        <div
          className="borrow-ui__form__label borrow-ui__form__label--horizontal borrow-ui__form__label--alignment-left"
          style={
            Object {
              "minWidth": 280,
              "width": 280,
            }
          }
        >
          Very very long field label for input field
           
        </div>
        <div
          className="borrow-ui__form__field__controller borrow-ui__form__field__controller--horizontal "
        >
          <input
            className="borrow-ui__form__field__input   undefined"
            placeholder="Insert your name..."
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Storyshots Forms/Field Layout 1`] = `
<div
  className="storybook-container borrow-ui"
>
  <form
    onSubmit={[Function]}
  >
    <div
      style={
        Object {
          "width": 400,
        }
      }
    >
      <div>
        <div
          className="borrow-ui__form__field borrow-ui__form__field--vertical"
        >
          <div
            className="borrow-ui__form__label borrow-ui__form__label--vertical borrow-ui__form__label--alignment-left"
            style={Object {}}
          >
            Vertical layout label
             
          </div>
          <div
            className="borrow-ui__form__field__controller borrow-ui__form__field__controller--vertical "
          >
            <input
              className="borrow-ui__form__field__input   undefined"
              placeholder="Insert your name..."
            />
          </div>
        </div>
      </div>
      <div>
        <div
          className="borrow-ui__form__field borrow-ui__form__field--horizontal"
        >
          <div
            className="borrow-ui__form__label borrow-ui__form__label--horizontal borrow-ui__form__label--alignment-left"
            style={Object {}}
          >
            Horizontal layout label
             
          </div>
          <div
            className="borrow-ui__form__field__controller borrow-ui__form__field__controller--horizontal "
          >
            <input
              className="borrow-ui__form__field__input   undefined"
              placeholder="Insert your name..."
            />
          </div>
        </div>
      </div>
      <h3>
        The same with shortcut components
      </h3>
      <div>
        <div
          className="borrow-ui__form__field borrow-ui__form__field--vertical"
        >
          <div
            className="borrow-ui__form__label borrow-ui__form__label--vertical borrow-ui__form__label--alignment-left"
            style={Object {}}
          >
            Vertical layout label
             
          </div>
          <div
            className="borrow-ui__form__field__controller borrow-ui__form__field__controller--vertical "
          >
            <input
              className="borrow-ui__form__field__input   undefined"
              placeholder="Insert your name..."
            />
          </div>
        </div>
      </div>
      <div>
        <div
          className="borrow-ui__form__field borrow-ui__form__field--horizontal"
        >
          <div
            className="borrow-ui__form__label borrow-ui__form__label--horizontal borrow-ui__form__label--alignment-left"
            style={Object {}}
          >
            Horizontal layout label
             
          </div>
          <div
            className="borrow-ui__form__field__controller borrow-ui__form__field__controller--horizontal "
          >
            <input
              className="borrow-ui__form__field__input   undefined"
              placeholder="Insert your name..."
            />
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;
